Make sure to not compute negative widths for blocks.  Bug 230249, r+sr=dbaron